test_responses/response-45/dump/kube-system/kube-apiserver-response-45-control-plane/logs.txt
==== START logs for container kube-apiserver of pod kube-system/kube-apiserver-response-45-control-plane ====
I0102 14:59:38.459526       1 options.go:228] external host was not specified, using 172.18.0.9
I0102 14:59:38.461451       1 server.go:142] Version: v1.31.0
I0102 14:59:38.461487       1 server.go:144] "Golang settings" GOGC="" GOMAXPROCS="" GOTRACEBACK=""
I0102 14:59:38.651429       1 shared_informer.go:313] Waiting for caches to sync for node_authorizer
W0102 14:59:38.652460       1 logging.go:55] [core] [Channel #2 SubChannel #4]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
W0102 14:59:38.652468       1 logging.go:55] [core] [Channel #1 SubChannel #3]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
I0102 14:59:38.655262       1 shared_informer.go:313] Waiting for caches to sync for *generic.policySource[*k8s.io/api/admissionregistration/v1.ValidatingAdmissionPolicy,*k8s.io/api/admissionregistration/v1.ValidatingAdmissionPolicyBinding,k8s.io/apiserver/pkg/admission/plugin/policy/validating.Validator]
I0102 14:59:38.657110       1 plugins.go:157] Loaded 12 mutating admission controller(s) successfully in the following order: NamespaceLifecycle,LimitRanger,ServiceAccount,NodeRestriction,TaintNodesByCondition,Priority,DefaultTolerationSeconds,DefaultStorageClass,StorageObjectInUseProtection,RuntimeClass,DefaultIngressClass,MutatingAdmissionWebhook.
I0102 14:59:38.657147       1 plugins.go:160] Loaded 13 validating admission controller(s) successfully in the following order: LimitRanger,ServiceAccount,PodSecurity,Priority,PersistentVolumeClaimResize,RuntimeClass,CertificateApproval,CertificateSigning,ClusterTrustBundleAttest,CertificateSubjectRestriction,ValidatingAdmissionPolicy,ValidatingAdmissionWebhook,ResourceQuota.
I0102 14:59:38.657259       1 instance.go:232] Using reconciler: lease
W0102 14:59:38.657847       1 logging.go:55] [core] [Channel #5 SubChannel #6]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
W0102 14:59:39.653475       1 logging.go:55] [core] [Channel #2 SubChannel #4]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
W0102 14:59:39.653544       1 logging.go:55] [core] [Channel #1 SubChannel #3]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
W0102 14:59:39.658229       1 logging.go:55] [core] [Channel #5 SubChannel #6]grpc: addrConn.createTransport failed to connect to {Addr: "127.0.0.1:2379", ServerName: "127.0.0.1:2379", }. Err: connection error: desc = "transport: Error while dialing: dial tcp 127.0.0.1:2379: connect: connection refused"
I0102 14:59:41.262381       1 handler.go:286] Adding GroupVersion apiextensions.k8s.io v1 to ResourceManager
W0102 14:59:41.262410       1 genericapiserver.go:765] Skipping API apiextensions.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.361223       1 handler.go:286] Adding GroupVersion  v1 to ResourceManager
I0102 14:59:41.361410       1 apis.go:105] API group "internal.apiserver.k8s.io" is not enabled, skipping.
I0102 14:59:41.465308       1 apis.go:105] API group "storagemigration.k8s.io" is not enabled, skipping.
I0102 14:59:41.680559       1 apis.go:105] API group "resource.k8s.io" is not enabled, skipping.
I0102 14:59:41.688689       1 handler.go:286] Adding GroupVersion authentication.k8s.io v1 to ResourceManager
W0102 14:59:41.688726       1 genericapiserver.go:765] Skipping API authentication.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.688733       1 genericapiserver.go:765] Skipping API authentication.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.688995       1 handler.go:286] Adding GroupVersion authorization.k8s.io v1 to ResourceManager
W0102 14:59:41.689018       1 genericapiserver.go:765] Skipping API authorization.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.689468       1 handler.go:286] Adding GroupVersion autoscaling v2 to ResourceManager
I0102 14:59:41.689825       1 handler.go:286] Adding GroupVersion autoscaling v1 to ResourceManager
W0102 14:59:41.689847       1 genericapiserver.go:765] Skipping API autoscaling/v2beta1 because it has no resources.
W0102 14:59:41.689851       1 genericapiserver.go:765] Skipping API autoscaling/v2beta2 because it has no resources.
I0102 14:59:41.690544       1 handler.go:286] Adding GroupVersion batch v1 to ResourceManager
W0102 14:59:41.690567       1 genericapiserver.go:765] Skipping API batch/v1beta1 because it has no resources.
I0102 14:59:41.691026       1 handler.go:286] Adding GroupVersion certificates.k8s.io v1 to ResourceManager
W0102 14:59:41.691048       1 genericapiserver.go:765] Skipping API certificates.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.691052       1 genericapiserver.go:765] Skipping API certificates.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.691311       1 handler.go:286] Adding GroupVersion coordination.k8s.io v1 to ResourceManager
W0102 14:59:41.691332       1 genericapiserver.go:765] Skipping API coordination.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.691337       1 genericapiserver.go:765] Skipping API coordination.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.691631       1 handler.go:286] Adding GroupVersion discovery.k8s.io v1 to ResourceManager
W0102 14:59:41.691654       1 genericapiserver.go:765] Skipping API discovery.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.692550       1 handler.go:286] Adding GroupVersion networking.k8s.io v1 to ResourceManager
W0102 14:59:41.692584       1 genericapiserver.go:765] Skipping API networking.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.692589       1 genericapiserver.go:765] Skipping API networking.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.692841       1 handler.go:286] Adding GroupVersion node.k8s.io v1 to ResourceManager
W0102 14:59:41.692864       1 genericapiserver.go:765] Skipping API node.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.692868       1 genericapiserver.go:765] Skipping API node.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.693349       1 handler.go:286] Adding GroupVersion policy v1 to ResourceManager
W0102 14:59:41.693372       1 genericapiserver.go:765] Skipping API policy/v1beta1 because it has no resources.
I0102 14:59:41.694641       1 handler.go:286] Adding GroupVersion rbac.authorization.k8s.io v1 to ResourceManager
W0102 14:59:41.694668       1 genericapiserver.go:765] Skipping API rbac.authorization.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.694674       1 genericapiserver.go:765] Skipping API rbac.authorization.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.695476       1 handler.go:286] Adding GroupVersion scheduling.k8s.io v1 to ResourceManager
W0102 14:59:41.695508       1 genericapiserver.go:765] Skipping API scheduling.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.695513       1 genericapiserver.go:765] Skipping API scheduling.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.696704       1 handler.go:286] Adding GroupVersion storage.k8s.io v1 to ResourceManager
W0102 14:59:41.696728       1 genericapiserver.go:765] Skipping API storage.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.696733       1 genericapiserver.go:765] Skipping API storage.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.697269       1 handler.go:286] Adding GroupVersion flowcontrol.apiserver.k8s.io v1 to ResourceManager
I0102 14:59:41.697838       1 handler.go:286] Adding GroupVersion flowcontrol.apiserver.k8s.io v1beta3 to ResourceManager
W0102 14:59:41.697860       1 genericapiserver.go:765] Skipping API flowcontrol.apiserver.k8s.io/v1beta2 because it has no resources.
W0102 14:59:41.697864       1 genericapiserver.go:765] Skipping API flowcontrol.apiserver.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.703543       1 handler.go:286] Adding GroupVersion apps v1 to ResourceManager
W0102 14:59:41.703571       1 genericapiserver.go:765] Skipping API apps/v1beta2 because it has no resources.
W0102 14:59:41.703577       1 genericapiserver.go:765] Skipping API apps/v1beta1 because it has no resources.
I0102 14:59:41.706430       1 handler.go:286] Adding GroupVersion admissionregistration.k8s.io v1 to ResourceManager
W0102 14:59:41.706458       1 genericapiserver.go:765] Skipping API admissionregistration.k8s.io/v1beta1 because it has no resources.
W0102 14:59:41.706464       1 genericapiserver.go:765] Skipping API admissionregistration.k8s.io/v1alpha1 because it has no resources.
I0102 14:59:41.706765       1 handler.go:286] Adding GroupVersion events.k8s.io v1 to ResourceManager
W0102 14:59:41.706786       1 genericapiserver.go:765] Skipping API events.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.712808       1 handler.go:286] Adding GroupVersion apiregistration.k8s.io v1 to ResourceManager
W0102 14:59:41.712839       1 genericapiserver.go:765] Skipping API apiregistration.k8s.io/v1beta1 because it has no resources.
I0102 14:59:41.960510       1 dynamic_cafile_content.go:160] "Starting controller" name="request-header::/etc/kubernetes/pki/front-proxy-ca.crt"
I0102 14:59:41.960728       1 dynamic_cafile_content.go:160] "Starting controller" name="client-ca-bundle::/etc/kubernetes/pki/ca.crt"
I0102 14:59:41.960741       1 dynamic_serving_content.go:135] "Starting controller" name="serving-cert::/etc/kubernetes/pki/apiserver.crt::/etc/kubernetes/pki/apiserver.key"
I0102 14:59:41.960839       1 secure_serving.go:213] Serving securely on [::]:6443
I0102 14:59:41.960900       1 aggregator.go:169] waiting for initial CRD sync...
I0102 14:59:41.960911       1 system_namespaces_controller.go:66] Starting system namespaces controller
I0102 14:59:41.960935       1 tlsconfig.go:243] "Starting DynamicServingCertificateController"
I0102 14:59:41.961002       1 controller.go:119] Starting legacy_token_tracking_controller
I0102 14:59:41.961033       1 shared_informer.go:313] Waiting for caches to sync for configmaps
I0102 14:59:41.961069       1 dynamic_serving_content.go:135] "Starting controller" name="aggregator-proxy-cert::/etc/kubernetes/pki/front-proxy-client.crt::/etc/kubernetes/pki/front-proxy-client.key"
I0102 14:59:41.961073       1 remote_available_controller.go:411] Starting RemoteAvailability controller
I0102 14:59:41.961082       1 cache.go:32] Waiting for caches to sync for RemoteAvailability controller
I0102 14:59:41.961139       1 gc_controller.go:78] Starting apiserver lease garbage collector
I0102 14:59:41.961238       1 cluster_authentication_trust_controller.go:443] Starting cluster_authentication_trust_controller controller
I0102 14:59:41.961247       1 shared_informer.go:313] Waiting for caches to sync for cluster_authentication_trust_controller
I0102 14:59:41.961296       1 controller.go:80] Starting OpenAPI V3 AggregationController
I0102 14:59:41.961401       1 customresource_discovery_controller.go:292] Starting DiscoveryController
I0102 14:59:41.961299       1 apiservice_controller.go:100] Starting APIServiceRegistrationController
I0102 14:59:41.961430       1 cache.go:32] Waiting for caches to sync for APIServiceRegistrationController controller
I0102 14:59:41.961454       1 controller.go:142] Starting OpenAPI controller
I0102 14:59:41.961513       1 controller.go:90] Starting OpenAPI V3 controller
I0102 14:59:41.961544       1 naming_controller.go:294] Starting NamingConditionController
I0102 14:59:41.961544       1 dynamic_cafile_content.go:160] "Starting controller" name="client-ca-bundle::/etc/kubernetes/pki/ca.crt"
I0102 14:59:41.961556       1 establishing_controller.go:81] Starting EstablishingController
I0102 14:59:41.961566       1 nonstructuralschema_controller.go:195] Starting NonStructuralSchemaConditionController
I0102 14:59:41.961577       1 apiapproval_controller.go:189] Starting KubernetesAPIApprovalPolicyConformantConditionController
I0102 14:59:41.961609       1 crd_finalizer.go:269] Starting CRDFinalizer
I0102 14:59:41.961590       1 dynamic_cafile_content.go:160] "Starting controller" name="request-header::/etc/kubernetes/pki/front-proxy-ca.crt"
I0102 14:59:41.963808       1 apf_controller.go:377] Starting API Priority and Fairness config controller
I0102 14:59:41.963832       1 local_available_controller.go:156] Starting LocalAvailability controller
I0102 14:59:41.963837       1 cache.go:32] Waiting for caches to sync for LocalAvailability controller
I0102 14:59:41.963850       1 controller.go:78] Starting OpenAPI AggregationController
I0102 14:59:41.967272       1 crdregistration_controller.go:114] Starting crd-autoregister controller
I0102 14:59:41.967280       1 shared_informer.go:313] Waiting for caches to sync for crd-autoregister
I0102 14:59:42.051519       1 shared_informer.go:320] Caches are synced for node_authorizer
I0102 14:59:42.055777       1 shared_informer.go:320] Caches are synced for *generic.policySource[*k8s.io/api/admissionregistration/v1.ValidatingAdmissionPolicy,*k8s.io/api/admissionregistration/v1.ValidatingAdmissionPolicyBinding,k8s.io/apiserver/pkg/admission/plugin/policy/validating.Validator]
I0102 14:59:42.055805       1 policy_source.go:224] refreshing policies
I0102 14:59:42.061103       1 shared_informer.go:320] Caches are synced for configmaps
I0102 14:59:42.061204       1 cache.go:39] Caches are synced for RemoteAvailability controller
I0102 14:59:42.061401       1 shared_informer.go:320] Caches are synced for cluster_authentication_trust_controller
I0102 14:59:42.061446       1 cache.go:39] Caches are synced for APIServiceRegistrationController controller
I0102 14:59:42.061533       1 handler_discovery.go:450] Starting ResourceDiscoveryManager
I0102 14:59:42.061828       1 controller.go:615] quota admission added evaluator for: namespaces
I0102 14:59:42.063976       1 apf_controller.go:382] Running API Priority and Fairness config worker
I0102 14:59:42.063991       1 apf_controller.go:385] Running API Priority and Fairness periodic rebalancing process
I0102 14:59:42.064012       1 cache.go:39] Caches are synced for LocalAvailability controller
I0102 14:59:42.068244       1 shared_informer.go:320] Caches are synced for crd-autoregister
I0102 14:59:42.068291       1 aggregator.go:171] initial CRD sync complete...
I0102 14:59:42.068297       1 autoregister_controller.go:144] Starting autoregister controller
I0102 14:59:42.068302       1 cache.go:32] Waiting for caches to sync for autoregister controller
I0102 14:59:42.068305       1 cache.go:39] Caches are synced for autoregister controller
I0102 14:59:42.119372       1 controller.go:615] quota admission added evaluator for: leases.coordination.k8s.io
I0102 14:59:42.984637       1 storage_scheduling.go:95] created PriorityClass system-node-critical with value 2000001000
I0102 14:59:43.009540       1 storage_scheduling.go:95] created PriorityClass system-cluster-critical with value 2000000000
I0102 14:59:43.009564       1 storage_scheduling.go:111] all system priority classes are created successfully or already exist.
I0102 14:59:46.028105       1 controller.go:615] quota admission added evaluator for: roles.rbac.authorization.k8s.io
I0102 14:59:46.215592       1 controller.go:615] quota admission added evaluator for: rolebindings.rbac.authorization.k8s.io
I0102 14:59:46.434140       1 controller.go:615] quota admission added evaluator for: serviceaccounts
I0102 14:59:46.532869       1 alloc.go:330] "allocated clusterIPs" service="default/kubernetes" clusterIPs={"IPv4":"10.96.0.1"}
W0102 14:59:46.584500       1 lease.go:265] Resetting endpoints for master service "kubernetes" to [172.18.0.9]
I0102 14:59:46.585231       1 controller.go:615] quota admission added evaluator for: endpoints
I0102 14:59:46.601688       1 controller.go:615] quota admission added evaluator for: endpointslices.discovery.k8s.io
I0102 14:59:47.560946       1 controller.go:615] quota admission added evaluator for: deployments.apps
I0102 14:59:47.627703       1 alloc.go:330] "allocated clusterIPs" service="kube-system/kube-dns" clusterIPs={"IPv4":"10.96.0.10"}
I0102 14:59:47.641017       1 controller.go:615] quota admission added evaluator for: daemonsets.apps
I0102 14:59:51.835774       1 controller.go:615] quota admission added evaluator for: replicasets.apps
I0102 14:59:51.893680       1 controller.go:615] quota admission added evaluator for: controllerrevisions.apps
E0102 14:59:56.211979       1 finisher.go:175] "Unhandled Error" err="FinishRequest: post-timeout activity - time-elapsed: 3.8µs, panicked: false, err: context canceled, panic-reason: <nil>" logger="UnhandledError"
E0102 14:59:56.212041       1 wrap.go:53] "Timeout or abort while handling" logger="UnhandledError" method="PATCH" URI="/api/v1/namespaces/default/events/response-45-worker.1816e82f13527f41" auditID="e482d2b6-02e1-4660-8ab1-c9f3542c48eb"
E0102 14:59:56.212059       1 timeout.go:140] "Post-timeout activity" logger="UnhandledError" timeElapsed="2.7µs" method="PATCH" path="/api/v1/namespaces/default/events/response-45-worker.1816e82f13527f41" result=null
E0102 14:59:56.212084       1 finisher.go:175] "Unhandled Error" err="FinishRequest: post-timeout activity - time-elapsed: 1.9µs, panicked: false, err: context canceled, panic-reason: <nil>" logger="UnhandledError"
E0102 14:59:56.212073       1 writers.go:122] "Unhandled Error" err="apiserver was unable to write a JSON response: http: Handler timeout" logger="UnhandledError"
E0102 14:59:56.213212       1 status.go:71] "Unhandled Error" err="apiserver received an error that is not an metav1.Status: &errors.errorString{s:\"http: Handler timeout\"}: http: Handler timeout" logger="UnhandledError"
E0102 14:59:56.214343       1 writers.go:135] "Unhandled Error" err="apiserver was unable to write a fallback JSON response: http: Handler timeout" logger="UnhandledError"
E0102 14:59:56.215438       1 timeout.go:140] "Post-timeout activity" logger="UnhandledError" timeElapsed="3.41355ms" method="POST" path="/apis/coordination.k8s.io/v1/namespaces/kube-node-lease/leases" result=null
I0102 14:59:57.277500       1 alloc.go:330] "allocated clusterIPs" service="default/wordpress" clusterIPs={"IPv4":"10.96.132.9"}
==== END logs for container kube-apiserver of pod kube-system/kube-apiserver-response-45-control-plane ====
